--- a/jira-selenium-poc.csproj
+++ b/jira-selenium-poc.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Selenium.PhantomJS.WebDriver" Version="2.1.1" />
+    <PackageReference Include="Selenium.Support" Version="4.2.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
   </ItemGroup>
