--- a/jira-selenium-poc.csproj
+++ b/jira-selenium-poc.csproj
@@ -11,13 +11,14 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3" />
     <PackageReference Include="Selenium.PhantomJS.WebDriver" Version="2.1.1" />
-    <PackageReference Include="Selenium.Support" Version="4.2.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
+    <PackageReference Include="Selenium.Support" Version="4.9.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.9.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="112.0.5615.4900" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <None Update="BUS Mapping FI-01-00.xlsx" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="TUS Linkage File - 5.1.23.xlsx" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
