Process remaining items and project cfg improvmnts

--- a/jira-selenium-poc.csproj
+++ b/jira-selenium-poc.csproj
@@ -20,6 +20,7 @@
     <None Update="BUS Mapping FI-01-00.xlsx" CopyToOutputDirectory="PreserveNewest" />
     <None Update="TUS Linkage File - 5.1.23.xlsx" CopyToOutputDirectory="PreserveNewest" />
     <None Update="Copy of TUS Linkage File - 8.21.xlsx" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Copy of TUS Linkage File - 8.21-2.xlsx" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
